--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>FTZ STUDIO</title>
+	<title>FTZ Studio</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<meta name="description"content="Somos un pequeño estudio haciendo grandes cosas">
-
+	<meta name="description" content="Somos un pequeño estudio haciendo grandes cosas">
+	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="./reset.css">
 </head>
 <body>
-	
+	<div class="main">
+		<img src="img/folder.png" alt="Folder 01">
+		<img src="img/folder.png" alt="">
+	</div>
+
+<script  src="./script.js"></script>
 </body>
 </html>
