--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 	<div class="main">
-		<img src="img/folder.png" alt="Folder 01">
-		<img src="img/folder.png" alt="">
+		<img src="img/folder.png" alt="" class="folder">
+		<img src="img/folder.png" alt="" class="folder">
 	</div>
 
 <script  src="./script.js"></script>
