--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 </head>
 <body>
-  <!-- Modal-->
-  <div class="modal" style="background: #fff; width: 200px;" id="#modal">    
+  <div class="container">
+      <!-- Modal-->
+  <div class="modal" style="background: #fff;" id="#modal">    
     <h1>Mi Modal</h1>
   </div>
   <!-- Fin Modal -->
-  <div class="container">
+
       <!-- Folder #1 -->
       <div class="folder">
-		      <img src="img/folder.png" alt="" class="folder" id="draggable">
+		      <img src="img/folder.png" alt="" class="folder" id="draggable" ondblclick="myFunction()">
       </div>
       <!-- Folder #2 -->
       <div class="folder">
