--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 </head>
 <body>
+      <!-- Header -->
+    <div class="header">
+      <p class="finder">finder</p>
+      <img src="img/wifi.png">
+    </div>
+    <!-- Header -->
   <div class="container">
-      <!-- Modal-->
+  <!-- Modal-->
   <div class="modal" style="background: #fff;" id="#modal">    
     <h1>Mi Modal</h1>
   </div>
