--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <!-- Header -->
     <div class="header">
       <p class="finder">finder</p>
+      <img src="img/battery.png">
       <img src="img/wifi.png">
     </div>
     <!-- Header -->
@@ -25,16 +26,18 @@
   <!-- Fin Modal -->
 
       <!-- Folder #1 -->
-      <div class="folder">
-		      <img src="img/folder.png" alt="" class="folder" id="draggable" ondblclick="myFunction()">
+      <div class="folder" id="draggable">
+		      <img src="img/folder.png" alt="" class="folder" ondblclick="myFunction()">
+          <p>Nombre Carpeta</p>
       </div>
       <!-- Folder #2 -->
-      <div class="folder">
-          <img src="img/folder.png" alt="" class="folder" id="draggable2">
+      <div class="folder"  id="draggable2">
+          <img src="img/folder.png" alt="" class="folder">
       </div>
       <!-- Papelera -->
-      <div class="papelera">
-        <img src="img/paper.png" alt="" style="width: 6rem;" id="draggable3">
+      <div class="papelera"  id="draggable3">
+        <img src="img/paper.png" alt="" style="width: 6rem;">
+        <p>Papelera</p>
       </div>
 
   </div>
