Nombres Carpetas y Elementos
Agregamos textos y nombres a las carpetas y las papeleras

--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
       <!-- Folder #1 -->
       <div class="folder" id="draggable">
 		      <img src="img/folder.png" alt="" class="folder" ondblclick="myFunction()">
-          <p>Nombre Carpeta</p>
+          <p>Nuestro Equipo</p>
       </div>
       <!-- Folder #2 -->
       <div class="folder"  id="draggable2">
           <img src="img/folder.png" alt="" class="folder">
+          <p>Nuestra Empresa</p>
       </div>
       <!-- Papelera -->
       <div class="papelera"  id="draggable3">
-        <img src="img/paper.png" alt="" style="width: 6rem;">
+        <img src="img/paper.png">
         <p>Papelera</p>
       </div>
 
