Cambios en el modal
Agregamos los botones del modal. Y agregamos sombras

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>FTZ Studio</title>
+	<title>FTZ Studio - Somos un pequeño estudio haciendo grandes cosas</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta name="description" content="Somos un pequeño estudio haciendo grandes cosas">
 	<link rel="stylesheet" href="./style.css">
@@ -13,7 +13,7 @@
 <body>
       <!-- Header -->
     <div class="header">
-      <p class="lf_header finder">Finder</p>
+      <p class="lf_header finder">Ftz Studio</p>
       <p class="lf_header">File</p>
       <p class="lf_header">Edit</p>
       <p class="lf_header">View</p>
@@ -36,14 +36,18 @@
           <img src="img/folder.png" alt="" class="folder">
           <p>Nuestra Empresa</p>
       </div>
+
         <!-- Modal-->
         <div class="modal" id="modal">
           <div class="modal_header">
             <button onclick="closeDiv()"></button>
+            <button class="btn_amarillo"></button>
+            <button class="btn_verde"></button>
           </div>    
           <h1>Modal Nuestro Equipo</h1>
         </div>
         <!-- Fin Modal -->
+
       <!-- Papelera -->
       <div class="papelera"  id="draggable3">
         <img src="img/paper.png">
